<?xml version="1.0"?>
<package>
  <name>dualarm_mobile_bringup</name>
  <version>0.0.1</version>
  <description>Machine Learning and Control System dual-arm simulator</description>
  <license>GPLv3</license>

  <author email="seungchul0406@gmail.com">Seungchul Ha</author>

  <maintainer email="seungchul0406@gmail.com">Seungchul Ha</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>src</build_depend>
  <build_depend>worlds</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>launch</run_depend>
  <run_depend>src</run_depend>
  <run_depend>worlds</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  
  <export>

  </export>
</package>
